@@ -343,7 +343,6 @@ extern const char *xstrsignal (int signum);
 struct sigaction;
 extern int xsigaction (int signum, const struct sigaction *act,
 		       struct sigaction *oldact);
-extern int create_tempfile (const char *template, char **created_filename);
 extern char *create_tempdir (const char *template);
 
 extern int debug_level;		/* shows whether -d issued */
